<resources>
    <string name="app_name">RNPT</string>
    <string name="master_token">master_token</string>
    <string name="list_rnpt">List RNPT</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="static_settings">Настройки</string>
    <string name="static_adress_service_fnc">Адрес сервиса ФНС:</string>
    <string name="static_company_name">Организация</string>
    <string name="static_button_get_master_token">Получить мастер-токен</string>
    <string name="static_master_token">Мастер-токен:</string>
    <string name="static_adress_service">Адрес сервиса:</string>


</resources>